src/snapshots/cosmos_rust__query__tests__get_all_tokens_should_return_all_tokens_started_after_some_token.snap
---
source: src/query.rs
expression: res
---
{
  "tokens": [
    {
      "owner": "owner",
      "token_id": "2",
      "token_uri": null
    },
    {
      "owner": "owner",
      "token_id": "3",
      "token_uri": null
    }
  ]
}
