src/snapshots/cosmos_rust__query__tests__get_all_tokens_should_return_all_tokens_with_some_limit.snap
---
source: src/query.rs
expression: res
---
{
  "tokens": [
    {
      "owner": "owner",
      "token_id": "1",
      "token_uri": null
    }
  ]
}
