src/snapshots/cosmos_rust__query__tests__get_owner_tokens_should_return_owner_tokens.snap
---
source: src/query.rs
expression: res
---
{
  "tokens": [
    {
      "owner": "owner",
      "token_id": "1",
      "token_uri": null
    },
    {
      "owner": "owner",
      "token_id": "2",
      "token_uri": null
    },
    {
      "owner": "owner",
      "token_id": "3",
      "token_uri": null
    }
  ]
}
